Added dp and other improvements to the site

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -15,7 +15,7 @@
         </p>
       </div>
       <div class="footer-col"></div>
-      <div class="footer-col"></div>
+      <!-- <div class="footer-col"></div> -->
       <div class="footer-col">
       {%- if site.author %}
         <ul class="contact-list">
