Add some style changes

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,7 +11,7 @@
               <use xlink:href="{{ 'assets/minima-social-icons.svg#rss' | relative_url }}"></use>
             </svg><span>Subscribe</span>
           </a> -->
-          Made with ☕ & <a href="pages.github.com">Github Pages</a>
+          Made with ☕ & <a href="https://pages.github.com">Github Pages</a>
         </p>
       </div>
       <div class="footer-col"></div>
